--- a/src/main/resources/web/admLogin.html
+++ b/src/main/resources/web/admLogin.html
@@ -54,7 +54,7 @@
                     dataType:"json",
                     success:function(result){
                     if(result.success){
-                        window.location = [[@{/index}]];
+                        window.location = [[@{/admIndex}]];
                         }else{
                             layer.msg(result.msg);
                         }
