--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -32,8 +32,7 @@
                     <span th:text="${account.username}"></span>
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">基本资料</a></dd>
-                    <dd><a id="editPass" href="javascript:">安全设置</a></dd>
+                    <dd><a id="editPass" href="javascript:">修改密码</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item"><a th:href="@{/logout}">退出</a></li>
